--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^10.8.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@google/genai": "^0.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
