--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@google/genai": "*"
+    "@google/genai": "*",
+    "framer-motion": "^11.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
